* Avoid a small bug responsible for duplicate zim calls
* Per default, Kiwix instance are not "live" anymoore. Can now be decided with buildDistribution.pl
* Propose a download dialog if the mime-type is unknown
* New locales: Catalan
* Fix a bug with the "impossible" indexing process in case of defect library.xml (ID: 3068722)
* Reintroduction of the skin switcher tool

Kiwix 0.9 alpha6
* Fix a regression bug impacting the case insensitive (first character only) suggestion system
* Fix a bug in kiwix-serve impacting search results with titles including special characters
* Add the --verbose|-v arugment to kiwix-index
* Add a stub HTML header&footer in case of the article only have a <body> (ID: 3030608)
* Fix a bug in the ./configure libicu version checking (ID: 3034150)
* Fix a bug in the debian/posrtrm script (ID: 3035092)
* Complete the DEB package with additional informations
* Add the "Purge history" Tool (ID: 3036917)
* Tab navigation (ID: 1644478)
* Capacity to deal with splitted ZIM files
* Add mouse button forward/back support (ID: 3052213)
* Fix annoyous bug impacting user moving and reopening the same file (ID: 3052211)
* Remember the file picker path over sessions
* Does not read/save anymore the profile library if "live" instance (DVD or USB)
* Per default, use now the OS default language and not English anymore
* Remove the auto full text search by typing the search pattern (was introduced in alpha5 and needs too much CPU)
* Add new useful keyboard shortcuts like in Firefox (ID: 2992557)
* Better help page in English

Kiwix 0.9 alpha5
* kiwix-serve supports the inflate/deflate compression for text/html
* Fix bug in the search query tokenizer impact massively Malayalam

Kiwix 0.9 alpha4
* Fix a bug (regression) if no welcome page in the ZIM
* Introduce the kiwix-debug.bat for Windows
* Fix a UNICODE issue on Windows search engine
* kiwix-compact can now directly take xapian-directory path as argument

Kiwix 0.9 alpha3